Second update of the html part

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		<img class="logo" src="images/logo.svg">
 		<h1 class="big-header">A history of everything you copy</h1>
 		<p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
-		<div class="row bouton">
-		<a class="button-ios btn-info rounded-pill col" href="#">Download for IOS</a>
-		<a class="button-mac btn-primary rounded-pill col" href="#">Download for MAC</a>
+		<div class="row d-flex justify-content-center">
+		<a class="button-ios btn-info rounded-pill col-lg-2" href="#">Download for IOS</a>
+		<a class="button-mac btn-primary rounded-pill col-lg-2" href="#">Download for MAC</a>
 		</div>
 	</header>
 	</div>
@@ -119,9 +119,9 @@
 	<section class="cta col-lg-12">
 		<h3 class="section-heading"> Clipboard for iOS and Mac OS</h3>
 		<p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
-		<div class="row">
-		<a class="button-ios btn-info rounded-pill col-lg-4" href="#">Download for IOS</a>
-		<a class="button-mac btn-primary rounded-pill col-lg-4" href="#">Download for MAC</a>
+		<div class="row d-flex justify-content-center">
+		<a class="button-ios btn-info rounded-pill col-lg-2" href="#">Download for IOS</a>
+		<a class="button-mac btn-primary rounded-pill col-lg-2" href="#">Download for MAC</a>
 		</div>
 	</section>
 	</div>
