third update of the html part

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				</ul>
 			</div>
 			<div class="col-lg-3">
-				<ul class="social-media">
+				<ul class="social-media d-flex justify-content-center">
 					<li><a href="#"><i class="fab fa-2x fa-facebook-f"></i></a></li>
 					<li><a href="#"><i class="fab fa-2x fa-twitter"></i></a></li>
 					<li><a href="#"><i class="fab fa-2x fa-instagram"></i></a></a></li>
